nova_tests/plan131/neg/vec_oob_get_neg.nv
// Plan 131 Ф.3 NEG — get() out of bounds returns None, does NOT panic.
// This is the safe-access contract: OOB read is recoverable via Option.

module neg.vec_oob_get_neg

import std.collections.vec.{Vec}

test "get(100) on empty returns None (no panic)" {
    mut v = Vec[int].new()
    assert(v.get(100) == None)
    assert(v.get(0) == None)
    assert(v.get(-1) == None)
}

test "get past len returns None on populated vec" {
    mut v = Vec[int].of(1, 2, 3)
    assert(v.get(3) == None)
    assert(v.get(99) == None)
}
